<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="timestamp"
        android:title="@string/prefs_timestamp"
        android:defaultValue="true"
        />
    <CheckBoxPreference
        android:key="copySelfApk"
        android:title="@string/prefs_copySelfApk"
        android:summary="@string/prefs_summaryCopySelfApk"
        android:defaultValue="true"
        />
    <CheckBoxPreference
        android:key="acquireWakelock"
        android:title="@string/prefs_acquireWakelock"
        android:summary="@string/prefs_summaryAcquireWakelock"
        android:defaultValue="true"
        />
    <EditTextPreference
        android:key="oldBackups"
        android:title="@string/prefs_oldBackups"
        android:summary="@string/prefs_summaryOldBackups"
        android:inputType="number"
        />
    <PreferenceCategory
        android:title="@string/prefs_pathscategory"
        android:key="pathscategory" >
        <EditTextPreference
            android:key="pathBackupFolder"
            android:title="@string/prefs_pathBackupFolder"
            android:summary="@string/prefs_summaryBackupFolder"
            />
        <EditTextPreference
            android:key="pathLogfile"
            android:title="@string/prefs_pathLogfile"
            android:summary="@string/prefs_summaryLogfile"
            />            
        <EditTextPreference
            android:key="pathBusybox"
            android:title="@string/prefs_pathBusybox"
            android:summary="@string/prefs_summaryBusybox"
            />
    </PreferenceCategory>
</PreferenceScreen>
